# Converter-DOCX-vs-MD

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  📄 README.md
docs/: build_linux.markdown  build_macos.markdown  build_windows.markdown
src/: main.py
src/converter/: converter_thread.py  utils.py
src/css/: styles_appendices.css  styles_images.css  styles_tables.css
src/dependencies/: checker.py
src/gui/: main_window.py  palette.py  preview_window.py
