[project]
name = "docx-to-markdown-converter"
version = "1.0.0"
description = "A PyQt5-based application for converting DOCX files to Markdown with preview and image handling."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15",
    "pypandoc>=1.7",
    "markdown>=3.3",
    "beautifulsoup4>=4.9",
    "wand>=0.6.7",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.1.0",
    "pytest>=7.4.0",
]

[project.scripts]
docx2md = "src.main:main"

[tool.setuptools]
packages = ["src", "src.dependencies", "src.gui", "src.converter"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"src" = ["*.py"]